# design-patterns-cpp

./: .gitignore  01_singleton.cpp  02_factory.cpp  03_abstract_factory.cpp  04_adapter.cpp  05_observer.cpp  06_state.cpp  07_iterator.cpp  08_visitor.cpp  CMakeLists.txt  README.md
